--- a/src/style/pengajuan.css
+++ b/src/style/pengajuan.css
@@ -1,3 +1,12 @@
+
+
+/* styling for datalist options */
+datalist option {
+  padding: 5px;
+  cursor: pointer;
+}
+
+
 .form-pengajuan {
   display: flex;
   flex-wrap: wrap;
