--- a/src/style/beranda.css
+++ b/src/style/beranda.css
@@ -18,7 +18,7 @@
   color: #808080;
   text-align: center;
   padding: 20px;
-  flex: 0 0 auto;
+  /* flex: 0 0 auto; */
   border-top-right-radius: 6px;
   border-top-left-radius: 6px;
 }
@@ -28,8 +28,9 @@
   /* style untuk body ketika layar lebih besar dari 600px */
   background-color: white;
   color: black;
-  padding: 20px;
-  flex: 1 1 auto;
+  padding: 10px;
+
+  /* flex: 1 1 auto; */
 }
 .sr-only{
   visibility: hidden;
@@ -56,10 +57,9 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-/* Import font */
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Roboto:700,400,400italic");
-/* General styles */
+
 * {
   margin: 0;
   padding: 0;
@@ -73,11 +73,6 @@
   padding: 0.5em;
   position: sticky;
   top: 0px;
-  /* position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 9999; */
 }
 
 nav {
@@ -313,13 +308,6 @@ span {
   color: red;
 }
 
-/* 
-warna pallete
-
-#091322
-#AD241B
-#F2F2F2 */
-
 .burgernih {
   width: 20px;
   margin-left: 5%;
@@ -380,13 +368,6 @@ warna pallete
   filter: hue-rotate(900deg);
 }
 
-/* .kolom-kontak > label .kolom-kontak > span {
-  display: inline-block;
-  vertical-align: top;
-  margin-top: -5px;
-  padding-top: 5px;
-} */
-
 .sistem {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
@@ -398,21 +379,19 @@ warna pallete
 
 @media (max-width: 600px) {
   .header {
-    /* style untuk header ketika layar kurang dari atau sama dengan 600px */
     background-color: #091322;
     font-size: smaller;
     flex: 0 0 auto;
   }
 
   .body {
-    /* style untuk body ketika layar kurang dari atau sama dengan 600px */
     background-color: #f2f2f2;
     font-size: smaller;
     flex: 1 1 auto;
+    /* padding: 5px; */
   }
 
   .footer {
-    /* style untuk body ketika layar kurang dari atau sama dengan 600px */
     background-color: gray;
     font-size: 8px;
     flex: 0 0 auto;
